# splunk-docs-mcp

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  pyproject.toml  versions.json
.github/workflows/: crawl-and-release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
scripts/: update_readme_versions.py
src/splunk_docs_mcp/: __init__.py  cli.py  config.py  crawler.py  db.py  discover.py  extractor.py  merge.py  server.py  setup.py
tests/: test_crawler.py  test_db.py  test_extractor.py  test_merge.py  test_server.py
