[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-docs-mcp"
version = "0.1.0"
description = "MCP server for Splunk documentation — Phase 1: Enterprise Security 8.5 + Configuration File Reference"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0,<2",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "trafilatura>=2.0.0,<3",
    "markdownify>=0.13.0",
    "sentence-transformers>=5.0.0,<6",
    "defusedxml>=0.7.0",
    "numpy>=1.26.0",
]

[project.scripts]
splunk-mcp   = "splunk_docs_mcp.server:run"
splunk-crawl = "splunk_docs_mcp.cli:main"
splunk-setup = "splunk_docs_mcp.setup:main"
splunk-merge = "splunk_docs_mcp.merge:main"

[tool.hatch.build.targets.wheel]
packages = ["src/splunk_docs_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
